--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.7.0",
     "events": "^1.1.0",
     "flux": "^2.1.1",
-    "react": "^0.14.2"
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
   },
   "devDependencies": {
     "http-server": "^0.8.5",
